# project5

./: README.md  main.py  pyproject.toml
cluster/: __init__.py  kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
