[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cluster"
authors = [{name = "Jacqueline Williams", email = "jacqueline.williams@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["numpy", "pytest", "scipy", "matplotlib"]

[project.urls]
Home = "https://github.com/williams-jacquelinec/project5"
